# clubos

./: test
clubcraft-saas/: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
clubcraft-saas/.github/workflows/: ci.yml
clubcraft-saas/backend/: .eslintrc.cjs  Dockerfile  jest.config.ts  package.json  tsconfig.json  tsup.config.ts
clubcraft-saas/backend/__tests__/: clubs.test.ts
clubcraft-saas/backend/prisma/: schema.prisma
clubcraft-saas/backend/src/: env.ts  index.ts  server.ts
clubcraft-saas/backend/src/domain/: rbac.ts
clubcraft-saas/backend/src/plugins/: auth.ts  prisma.ts  redis.ts
clubcraft-saas/backend/src/routes/: auth.ts  billing.ts  clubs.ts  webhooks.ts
clubcraft-saas/backend/src/schemas/: club.ts
clubcraft-saas/backend/src/services/: crunchbaseService.ts  googleAdsService.ts  metaAdsService.ts  polygonService.ts  retry.ts  stripeService.ts
clubcraft-saas/config/: .env.example
clubcraft-saas/docs/: api.md  sdk.md  setup.md
clubcraft-saas/frontend/: package.json  tailwind.config.ts
clubcraft-saas/frontend/app/: globals.css  layout.tsx  page.tsx
clubcraft-saas/frontend/app/dashboard/: page.tsx
clubcraft-saas/frontend/components/: Button.tsx  GlassCard.tsx  Navbar.tsx  PricingCard.tsx  TestimonialCard.tsx
clubcraft-saas/infra/: main.tf  outputs.tf  variables.tf
clubcraft-saas/infra/modules/cloudfront/: main.tf
clubcraft-saas/sdk/js/: package.json  tsconfig.json
clubcraft-saas/sdk/python/: pyproject.toml
clubcraft-saas/sdk/python/clubcraft/: __init__.py  client.py
(+5 files in other folders)
