[project]
name = "clubcraft"
version = "0.1.0"
description = "Python SDK for ClubCraft API"
requires-python = ">=3.10"
authors = [{ name = "ClubCraft" }]
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
